--- a/WebAPImongoClient/appsettings.json
+++ b/WebAPImongoClient/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DatabaseSettings": {
+    "ClientCollectionName": "Client",
+    "AdressCollectionName": "Adress",
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "WebAPIMongo"
+  }
 }
