--- a/WebAPImongoClient/appsettings.json
+++ b/WebAPImongoClient/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "DatabaseSettings": {
     "ClientCollectionName": "Client",
-    "AdressCollectionName": "Adress",
+    "AddressCollectionName": "Address",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "WebAPIMongo"
   }
